apps/convertx/convertx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: convertx
  namespace: convertx
  labels:
    app.kubernetes.io/name: convertx
    app.kubernetes.io/instance: convertx
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: convertx
      app.kubernetes.io/instance: convertx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: convertx
        app.kubernetes.io/instance: convertx
      annotations:
        iscsi.stevevaradi.me/eio-remediate: "true"
    spec:
      containers:
        - name: convertx
          # renovate: datasource=docker depName=ghcr.io/c4illin/convertx
          image: ghcr.io/c4illin/convertx:v0.19.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - mountPath: /app/data
              name: data
          resources:
            requests:
              cpu: 10m
              memory: 272Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: convertx-convertx-data
